- Version 0.0.21. - Fixed Java 11 API used, target is Java 8. 	> String.isBlank() replaced by String.trim().isEmpty() 	> Duration.toXXXPart() replaced by Duration. toXXX() - Fixed duration text calculation.